--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "homepage": "https://vlasvin.github.io/contacts-book-frontend/",
   "dependencies": {
-    "@mui/material": "^5.15.1",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "notiflix": "^3.2.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^9.0.4",
